--- a/public/tools.css
+++ b/public/tools.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     min-height: 100vh;
 }
 
@@ -36,7 +37,8 @@ body.theme-light a {
     height: 100%;
 }
 
-.main-container, .flex-container {
+.main-container,
+.flex-container {
     padding: 0;
     margin: 0;
     display: flex;
@@ -44,36 +46,39 @@ body.theme-light a {
     justify-content: center;
 }
 
+.flex-spread {
+    justify-content: space-between;
+}
+
 .main {
     margin: 16px 0
+}
+
+.text {
+    max-width: 80ch;
 }
 
 .row {
     width: auto;
 }
 
-.flex-item {
-    padding: 5px;
-    width: 20px;
-    height: 20px;
-    margin: 10px;
-    line-height: 20px;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
-    text-align: center;
-}
 
 .clock {
     font-size: 3em;
 }
 
-input[type=text], textarea {
+input[type=text],
+input[type=number],
+textarea {
     display: block;
     border: 1px solid #999;
     margin: 0;
     padding: 2px;
     width: calc(100% - 2px - 2*2px);
+}
+
+input:read-only {
+    background-color: #999;
 }
 
 textarea {
